--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "material-ui-search-bar": "^1.0.0-beta.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-loader": "^2.4.2",
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
