testing bug fixes to reach ldspdi

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -1,7 +1,7 @@
 {
    "ldspdi":
    {
-      "endpoints":["http://localhost:8080","http://localhost:13280","http://purl.bdrc.io"],
+      "endpoints":["http://localhost:8080","http://localhost:13280","http://buda1.bdrc.io:13280","http://purl.bdrc.io"],
       "index":2
    }
 }
