--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -10,9 +10,9 @@
       "index":0
    },
    "facets":{
-      "simple":[
-         { "bdo:Work": [ "bdo:ObjectType" ] },
-         { "bdo:Person": [ "bdo:Gender" ] }
-      ]
+      "simple":{
+          "bdo:Work": [ "bdo:workObjectType" ],
+          "bdo:Person": [ "bdo:personGender" ]
+      }
    }
 }
