added Any facet selector + ordered datatypes/facets lists

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -14,7 +14,8 @@
           "bdo:Work": [ "bdo:workLangScript","bdo:workObjectType","bdo:workType","bdo:workPartType" ],
           "bdo:Person": [ "bdo:personGender" ],
           "bdo:Lineage": [ "bdo:lineageType" ],
-          "bdo:Place": [ "bdo:placeType" ]
+          "bdo:Place": [ "bdo:placeType" ],
+          "bdo:Etext": [ "adm:Status" ]
       }
    }
 }
