--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -10,11 +10,12 @@
       "index":0
    },
    "facets":{
-      "Person": { "gender" : "http://purl.bdrc.io/ontology/core/Gender" },
+      "Person": { "gender" : "http://purl.bdrc.io/ontology/core/personGender" },
       "Work": {
-         "langScript": "http://purl.bdrc.io/ontology/core/LangScript",
+         "langScript": "http://purl.bdrc.io/ontology/core/workLangScript",
          "status":"http://purl.bdrc.io/ontology/admin/status",
          "access":"http://purl.bdrc.io/ontology/admin/access",
          "license":"http://purl.bdrc.io/ontology/admin/license"
       }
+   }
 }
