moved UV in resource page + fetch first image if available

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "google-maps-react": "^2.0.0",
+    "jquery": "^3.3.1",
     "material-colors": "^1.2.5",
     "material-ui": "^1.0.0-beta.32",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -12,6 +13,7 @@
     "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-load-script": "^0.0.6",
     "react-loader": "^2.4.2",
     "react-redux": "^5.0.6",
     "react-redux-i18n": "^1.9.2",
@@ -22,7 +24,8 @@
     "redux-actions": "^2.2.1",
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "universalviewer": "^3.0.16"
   },
   "scripts": {
     "start": "react-scripts start",
