--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "material-ui-search-bar": "^1.0.0-beta.4",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-load-script": "^0.0.6",
     "react-loader": "^2.4.2",
