--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -10,8 +10,15 @@
       "index":0
    },
    "facets":{
-      "Person": { "gender" : "http://purl.bdrc.io/ontology/core/personGender" },
+      "Lineage": {
+         "relation":"http://purl.bdrc.io/ontology/tmp/relationType"
+      },
+      "Person": {
+         "relation":"http://purl.bdrc.io/ontology/tmp/relationType",
+         "gender" : "http://purl.bdrc.io/ontology/core/personGender"
+      },
       "Work": {
+         "relation":"http://purl.bdrc.io/ontology/tmp/relationType",
          "langScript": "http://purl.bdrc.io/ontology/core/workLangScript",
          "status":"http://purl.bdrc.io/ontology/admin/status",
          "access":"http://purl.bdrc.io/ontology/admin/access",
