added making a tree of properties eg kinWith/workCreator

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -10,6 +10,9 @@
       "index":0
    },
    "facets":{
+      "Place": {
+         "relation":"http://purl.bdrc.io/ontology/tmp/relationType"
+      },
       "Lineage": {
          "relation":"http://purl.bdrc.io/ontology/tmp/relationType"
       },
