--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.2.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
+    "react-infinite-scroller": "^1.1.4",
     "react-load-script": "^0.0.6",
     "react-loader": "^2.4.2",
     "react-redux": "^5.0.6",
