added sorting result chunks by forEtext + seqNum

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -28,6 +28,10 @@
          "license":"http://purl.bdrc.io/ontology/admin/license",
          "type":"http://purl.bdrc.io/ontology/core/workType",
          "tree":"http://purl.bdrc.io/ontology/core/workGenre"
+      },
+      "Etext": {
+         "work":"http://purl.bdrc.io/ontology/tmp/forWork",
+         "tree":"http://purl.bdrc.io/ontology/core/workGenre"
       }
    }
 }
