--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-polyfill": "^6.26.0",
     "google-maps-react": "^2.0.0",
     "jquery": "^3.3.1",
+    "js-file-download": "^0.4.1",
     "lodash": "^4.17.10",
     "material-colors": "^1.2.5",
     "material-ui": "^1.0.0-beta.32",
