--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "downloadjs": "^1.4.7",
     "google-maps-react": "^2.0.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.1",
@@ -19,6 +20,7 @@
     "react-infinite-scroller": "^1.1.4",
     "react-load-script": "^0.0.6",
     "react-loader": "^2.4.2",
+    "react-new-window": "^0.0.7",
     "react-redux": "^5.0.6",
     "react-redux-i18n": "^1.9.2",
     "react-router": "^4.2.0",
