fixed etext bug in results

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -34,7 +34,7 @@
       }
    },
    "links":[
-      { "title":"Abstract text of the Bodhisattvacaryāvatāra", "id":"W19740", "label":"spyod 'jug'", "lang":"bo-x-ewts", "icon":"Abstract Work" },
+      { "title":"Abstract text of the Bodhisattvacaryāvatāra", "id":"W19740", "label":"spyod 'jug", "lang":"bo-x-ewts", "icon":"Abstract Work" },
       { "title":"Shantideva", "id":"P6161", "label":"zhi ba lha/" }
    ]
 }
