--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "auth0-js": "^9.6.1",
     "babel-polyfill": "^6.26.0",
     "downloadjs": "^1.4.7",
     "google-maps-react": "^2.0.0",
