moved Auth0 info to config file

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -1,4 +1,12 @@
 {
+   "auth":{
+     "domain": "bdrc-io.auth0.com",
+     "clientID": "bZRCKQvibdCq5gF7gV2biIH9rLcqfVcS",
+     "redirectUri": "http://library.bdrc.io/auth/callback",
+     "audience": "https://bdrc-io.auth0.com/userinfo",
+     "responseType": "token id_token",
+     "scope": "openid user_metadata app_metada"
+  },
    "ldspdi":
    {
       "endpoints":["http://localhost:8080","http://localhost:13280","http://buda1.bdrc.io:13280","http://purl.bdrc.io"],
