--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
     "auth0-js": "^9.6.1",
     "babel-polyfill": "^6.26.0",
     "downloadjs": "^1.4.7",
@@ -11,8 +13,6 @@
     "js-file-download": "^0.4.1",
     "lodash": "^4.17.10",
     "material-colors": "^1.2.5",
-    "material-ui": "^1.0.0-beta.32",
-    "material-ui-icons": "^1.0.0-beta.17",
     "material-ui-search-bar": "^1.0.0-beta.4",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
