--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "auth0-js": "^9.6.1",
     "babel-polyfill": "^6.26.0",
     "downloadjs": "^1.4.7",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "google-maps-react": "^2.0.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.1",
@@ -27,6 +30,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "react-test-renderer": "^16.4.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-devtools-extension": "^2.13.2",
