--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
     "auth0-js": "^9.6.1",
+    "babel-jest": "^23.4.2",
     "babel-polyfill": "^6.26.0",
     "downloadjs": "^1.4.7",
     "enzyme": "^3.3.0",
@@ -50,6 +51,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.17.0",
     "flow-bin": "^0.64.0",
     "flow-typed": "^2.3.0"
