--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "eslint": "^4.17.0",
     "flow-bin": "^0.64.0",
     "flow-typed": "^2.3.0",
+    "json-server": "^0.14.0",
+    "tcp-port-used": "^0.1.2",
     "xmlhttprequest": "^1.8.0"
   }
 }
