--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "formdata-polyfill": "^3.0.11",
     "google-maps-react": "^2.0.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.1",
