--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "react-scrollable-anchor": "^0.6.1",
     "react-test-renderer": "^16.4.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
