--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
+    "@turf/bbox": "^6.0.1",
+    "@turf/meta": "^6.0.2",
     "auth0-js": "^9.6.1",
     "babel-jest": "^23.4.2",
     "babel-polyfill": "^6.26.0",
@@ -16,6 +18,7 @@
     "google-maps-react": "^2.0.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.1",
+    "leaflet": "^1.3.4",
     "lodash": "^4.17.10",
     "material-colors": "^1.2.5",
     "material-ui-search-bar": "^1.0.0-beta.4",
@@ -24,6 +27,8 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-infinite-scroller": "^1.1.4",
+    "react-leaflet": "^2.0.1",
+    "react-leaflet-google": "^3.3.1",
     "react-load-script": "^0.0.6",
     "react-loader": "^2.4.2",
     "react-new-window": "^0.0.7",
