--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "formdata-polyfill": "^3.0.11",
+    "google-maps": "^3.3.0",
     "google-maps-react": "^2.0.0",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.1",
@@ -28,7 +29,7 @@
     "react-dom": "^16.2.0",
     "react-infinite-scroller": "^1.1.4",
     "react-leaflet": "^2.0.1",
-    "react-leaflet-google": "^3.3.1",
+    "react-leaflet-google": "https://github.com/danieldunderfelt/react-leaflet-google.git",
     "react-leaflet-portal": "^0.1.11",
     "react-load-script": "^0.0.6",
     "react-loader": "^2.4.2",
