--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^2.0.0",
     "@turf/bbox": "^6.0.1",
     "@turf/meta": "^6.0.2",
+    "annotated-etext-react": "https://github.com/BuddhistDigitalResourceCenter/annotated-etext-react",
     "auth0-js": "^9.6.1",
     "babel-jest": "^23.4.2",
     "babel-polyfill": "^6.26.0",
@@ -46,7 +47,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
-    "universalviewer": "^3.0.16"
+    "universalviewer": "^3.0.16",
+    "webannocoll-react": "https://github.com/BuddhistDigitalResourceCenter/webannocoll-react"
   },
   "scripts": {
     "start": "react-scripts start",
