--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "material-ui-search-bar": "^1.0.0-beta.4",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
+    "react-cookie": "^3.0.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-infinite-scroller": "^1.1.4",
