--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "formdata-polyfill": "^3.0.11",
     "google-maps": "^3.3.0",
     "google-maps-react": "^2.0.0",
+    "ipv6": "^3.1.3",
     "jquery": "^3.3.1",
     "js-file-download": "^0.4.1",
     "leaflet": "^1.3.4",
     "lodash": "^4.17.10",
     "material-colors": "^1.2.5",
     "material-ui-search-bar": "^1.0.0-beta.4",
+    "mirador": "https://github.com/BuddhistDigitalResourceCenter/mirador",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-cookie": "^3.0.4",
