--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "auth0-js": "^9.6.1",
     "babel-jest": "^23.4.2",
     "babel-polyfill": "^6.26.0",
+    "diva.js": "^5.1.3",
     "downloadjs": "^1.4.7",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
