--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@material-ui/icons": "^2.0.0",
     "@turf/bbox": "^6.0.1",
     "@turf/meta": "^6.0.2",
-    "annotated-etext-react": "https://github.com/BuddhistDigitalResourceCenter/annotated-etext-react",
+    "annotated-etext-react": "https://github.com/buda-base/annotated-etext-react",
     "auth0-js": "^9.6.1",
     "babel-jest": "^23.4.2",
     "babel-polyfill": "^6.26.0",
@@ -26,7 +26,7 @@
     "lodash": "^4.17.10",
     "material-colors": "^1.2.5",
     "material-ui-search-bar": "^1.0.0-beta.4",
-    "mirador": "https://github.com/BuddhistDigitalResourceCenter/mirador",
+    "mirador": "https://github.com/buda-base/mirador",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-cookie": "^3.0.4",
@@ -52,7 +52,7 @@
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "universalviewer": "^3.0.16",
-    "webannocoll-react": "https://github.com/BuddhistDigitalResourceCenter/webannocoll-react"
+    "webannocoll-react": "https://github.com/buda-base/webannocoll-react"
   },
   "scripts": {
     "start": "react-scripts start",
