--- a/package.json
+++ b/package.json
@@ -3,14 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
     "@turf/bbox": "^6.0.1",
     "@turf/meta": "^6.0.2",
     "annotated-etext-react": "https://github.com/buda-base/annotated-etext-react",
     "auth0-js": "^9.6.1",
-    "babel-jest": "^23.4.2",
-    "babel-polyfill": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.1.0",
     "diva.js": "^5.1.3",
     "downloadjs": "^1.4.7",
     "enzyme": "^3.3.0",
@@ -45,14 +67,13 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-scrollable-anchor": "^0.6.1",
-    "react-test-renderer": "^16.4.2",
+    "react-test-renderer": "^16.8.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-devtools-extension": "^2.13.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
-    "universalviewer": "^3.0.16",
-    "webannocoll-react": "https://github.com/buda-base/webannocoll-react"
+    "universalviewer": "^3.0.16"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -62,17 +83,33 @@
     "flow": "flow"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.17.0",
     "flow-bin": "^0.64.0",
-    "flow-typed": "^2.3.0",
+    "flow-typed": "^2.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
+    "jest-css-modules": "^1.1.0",
+    "jest-environment-jsdom": "^24.0.0",
     "json-server": "^0.14.0",
+    "prettier": "^1.16.4",
     "redux-test-utils": "^0.3.0",
     "tcp-port-used": "^0.1.2",
     "xmlhttprequest": "^1.8.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(css|less)$": "identity-obj-proxy"
+   },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ]
   }
 }
