--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -55,5 +55,15 @@
    "links":[
       { "title":"Abstract text of the Bodhisattvacaryāvatāra", "id":"W19740", "label":"spyod 'jug", "lang":"bo-x-ewts", "icon":"Abstract Work" },
       { "title":"Shantideva", "id":"P6161", "label":"zhi ba lha/" }
-   ]
+   ],   
+   "lang-script":{
+      "data":{
+         "presets":[
+            [ "bo-x-ewts", "sa-deva" ],
+            [ "bo", "zh-hans" ],
+            [ "zh-hant" ]
+         ],
+         "custom":[ "bo", "sa-deva", "zh-hant" ]
+      }
+   }
 }
