--- a/package.json
+++ b/package.json
@@ -1,117 +1,120 @@
 {
-   "name": "public-digital-library",
-   "version": "0.1.0",
-   "private": true,
-   "dependencies": {
-      "@babel/cli": "^7.0.0",
-      "@babel/core": "^7.0.0",
-      "@babel/plugin-proposal-class-properties": "^7.0.0",
-      "@babel/plugin-proposal-decorators": "^7.0.0",
-      "@babel/plugin-proposal-do-expressions": "^7.0.0",
-      "@babel/plugin-proposal-export-default-from": "^7.0.0",
-      "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-      "@babel/plugin-proposal-function-bind": "^7.0.0",
-      "@babel/plugin-proposal-function-sent": "^7.0.0",
-      "@babel/plugin-proposal-json-strings": "^7.0.0",
-      "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-      "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-      "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-      "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-      "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-      "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-      "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-      "@babel/plugin-syntax-import-meta": "^7.0.0",
-      "@babel/polyfill": "^7.0.0",
-      "@babel/preset-env": "^7.0.0",
-      "@babel/preset-flow": "^7.0.0",
-      "@babel/preset-react": "^7.0.0",
-      "@material-ui/core": "^1.4.2",
-      "@material-ui/icons": "^2.0.0",
-      "@turf/bbox": "^6.0.1",
-      "@turf/meta": "^6.0.2",
-      "annotated-etext-react": "https://github.com/buda-base/annotated-etext-react",
-      "auth0-js": "^9.6.1",
-      "babel-core": "^7.0.0-bridge.0",
-      "babel-jest": "^24.1.0",
-      "diva.js": "^5.1.3",
-      "downloadjs": "^1.4.7",
-      "enzyme": "^3.3.0",
-      "enzyme-adapter-react-16": "^1.1.1",
-      "enzyme-to-json": "^3.3.4",
-      "formdata-polyfill": "^3.0.11",
-      "google-maps": "^3.3.0",
-      "google-maps-react": "^2.0.0",
-      "ipv6": "^3.1.3",
-      "jquery": "^3.3.1",
-      "js-file-download": "^0.4.1",
-      "leaflet": "^1.3.4",
-      "lodash": "^4.17.10",
-      "material-colors": "^1.2.5",
-      "material-ui-search-bar": "^1.0.0-beta.4",
-      "mirador": "https://github.com/buda-base/mirador",
-      "query-string": "^5.1.0",
-      "react": "^16.2.0",
-      "react-cookie": "^3.0.4",
-      "react-copy-to-clipboard": "^5.0.1",
-      "react-dom": "^16.2.0",
-      "react-infinite-scroller": "^1.1.4",
-      "react-leaflet": "^2.0.1",
-      "react-leaflet-google": "https://github.com/danieldunderfelt/react-leaflet-google.git",
-      "react-leaflet-portal": "^0.1.11",
-      "react-load-script": "^0.0.6",
-      "react-loader": "^2.4.2",
-      "react-new-window": "^0.0.7",
-      "react-redux": "^5.0.6",
-      "react-redux-i18n": "^1.9.2",
-      "react-router": "^4.2.0",
-      "react-router-dom": "^4.2.2",
-      "react-scripts": "1.1.0",
-      "react-scrollable-anchor": "^0.6.1",
-      "react-test-renderer": "^16.8.2",
-      "redux": "^3.7.2",
-      "redux-actions": "^2.2.1",
-      "redux-devtools-extension": "^2.13.2",
-      "redux-saga": "^0.16.0",
-      "redux-thunk": "^2.2.0",
-      "universalviewer": "^3.0.16"
-   },
-   "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test --env=jsdom",
-      "eject": "react-scripts eject",
-      "flow": "flow"
-   },
-   "devDependencies": {
-      "eslint": "^4.17.0",
-      "flow-bin": "^0.64.0",
-      "flow-typed": "^2.5.1",
-      "identity-obj-proxy": "^3.0.0",
-      "jest": "^24.1.0",
-      "jest-cli": "^24.1.0",
-      "jest-css-modules": "^1.1.0",
-      "jest-environment-jsdom": "^24.0.0",
-      "jest-localstorage-mock": "^2.4.0",
-      "json-server": "^0.14.0",
-      "prettier": "^1.16.4",
-      "redux-test-utils": "^0.3.0",
-      "tcp-port-used": "^0.1.2",
-      "whatwg-fetch": "^3.0.0",
-      "xmlhttprequest": "^1.8.0"
-   },
-   "jest": {
-      "transform": {
-         "^.+\\.js$": "babel-jest"
-      },
-      "moduleNameMapper": {
-         "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|css|less)$": "identity-obj-proxy"
-      },
-      "moduleFileExtensions": [
-         "js",
-         "jsx"
-      ],
-      "moduleDirectories": [
-         "node_modules"
-      ]
-   }
+  "name": "public-digital-library",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
+    "@turf/bbox": "^6.0.1",
+    "@turf/meta": "^6.0.2",
+    "annotated-etext-react": "https://github.com/buda-base/annotated-etext-react",
+    "auth0-js": "^9.6.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "diva.js": "^5.1.3",
+    "downloadjs": "^1.4.7",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
+    "formdata-polyfill": "^3.0.11",
+    "google-maps": "^3.3.0",
+    "google-maps-react": "^2.0.0",
+    "ipv6": "^3.1.3",
+    "jquery": "^3.3.1",
+    "js-file-download": "^0.4.1",
+    "leaflet": "^1.3.4",
+    "lodash": "^4.17.10",
+    "material-colors": "^1.2.5",
+    "material-ui-search-bar": "^1.0.0-beta.4",
+    "mirador": "https://github.com/buda-base/mirador",
+    "query-string": "^5.1.0",
+    "react": "^16.2.0",
+    "react-cookie": "^3.0.4",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-dom": "^16.2.0",
+    "react-infinite-scroller": "^1.1.4",
+    "react-leaflet": "^2.0.1",
+    "react-leaflet-google": "https://github.com/danieldunderfelt/react-leaflet-google.git",
+    "react-leaflet-portal": "^0.1.11",
+    "react-load-script": "^0.0.6",
+    "react-loader": "^2.4.2",
+    "react-new-window": "^0.0.7",
+    "react-redux": "^5.0.6",
+    "react-redux-i18n": "^1.9.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^2.1.5",
+    "react-scrollable-anchor": "^0.6.1",
+    "react-test-renderer": "^16.8.2",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
+    "universalviewer": "^3.0.16"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "flow": "flow"
+  },
+  "devDependencies": {
+    "abortcontroller-polyfill": "^1.2.5",
+    "flow-bin": "^0.64.0",
+    "flow-typed": "^2.5.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-cli": "^24.1.0",
+    "jest-css-modules": "^1.1.0",
+    "jest-environment-jsdom": "^24.0.0",
+    "jest-localstorage-mock": "^2.4.0",
+    "json-server": "^0.14.0",
+    "prettier": "^1.16.4",
+    "redux-test-utils": "^0.3.0",
+    "tcp-port-used": "^0.1.2",
+    "whatwg-fetch": "^3.0.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga|css|less)$": "identity-obj-proxy"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ]
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
