--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -9,7 +9,7 @@
   },
    "ldspdi":
    {
-      "endpoints":["http://localhost:8080","http://localhost:13280","http://buda1.bdrc.io:13280","http://purl.bdrc.io"],
+      "endpoints":["http://localhost:8080","http://localhost:13280","http://buda1.bdrc.io:13280","http://purl.bdrc.io","http://localhost:5555/test"],
       "index":1
    },
    "iiif":
@@ -55,7 +55,7 @@
    "links":[
       { "title":"Abstract text of the Bodhisattvacaryāvatāra", "id":"W19740", "label":"spyod 'jug", "lang":"bo-x-ewts", "icon":"Abstract Work" },
       { "title":"Shantideva", "id":"P6161", "label":"zhi ba lha/" }
-   ],   
+   ],
    "lang-script":{
       "data":{
          "presets":[
