--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "cp-uv-to-public": "rm -rf public/scripts/uv && cp -R node_modules/universalviewer/uv public/scripts/",
+    "postinstall": "yarn cp-uv-to-public"
   },
   "devDependencies": {
     "abortcontroller-polyfill": "^1.2.5",
