--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
     "@turf/bbox": "^6.0.1",
