--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
+    "@sanskrit-coders/sanscript": "^1.0.2",
     "@turf/bbox": "^6.0.1",
     "@turf/meta": "^6.0.2",
     "annotated-etext-react": "https://github.com/buda-base/annotated-etext-react",
