--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "lodash": "^4.17.10",
     "material-colors": "^1.2.5",
     "material-ui-search-bar": "^1.0.0-beta.4",
-    "mirador": "https://github.com/buda-base/mirador",
+    "mirador": "https://github.com/buda-base/mirador#2.7.0-bdrc",
+    "openseadragon": "https://github.com/buda-base/openseadragon",
     "query-string": "^5.1.0",
     "react": "^16.2.0",
     "react-cookie": "^3.0.4",
@@ -86,7 +87,9 @@
     "eject": "react-scripts eject",
     "flow": "flow",
     "cp-uv-to-public": "rm -rf public/scripts/uv && cp -R node_modules/universalviewer/uv public/scripts/",
-    "postinstall": "yarn cp-uv-to-public"
+    "uv-custom-openseadragon": "cp -f node_modules/openseadragon/build/openseadragon/openseadragon.min.js public/scripts/uv/lib/",
+    "cp-mirador-to-public": "rm -rf public/scripts/mirador && cp -R node_modules/mirador/dist public/scripts/mirador",
+    "postinstall": "yarn cp-uv-to-public && yarn uv-custom-openseadragon && yarn cp-mirador-to-public"
   },
   "devDependencies": {
     "abortcontroller-polyfill": "^1.2.5",
