--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "eject": "react-scripts eject",
     "flow": "flow",
     "cp-uv-to-public": "rm -rf public/scripts/uv && cp -R node_modules/universalviewer/uv public/scripts/",
-    "uv-custom-openseadragon": "cp -f node_modules/openseadragon/build/openseadragon/openseadragon.min.js public/scripts/uv/lib/",
+    "uv-custom-openseadragon": "# [TODO] .min.js file not built anymore... #cp -f node_modules/openseadragon/build/openseadragon/openseadragon.min.js public/scripts/uv/lib/",
     "cp-mirador-to-public": "rm -rf public/scripts/mirador && cp -R node_modules/mirador/dist public/scripts/mirador",
     "postinstall": "yarn cp-uv-to-public && yarn uv-custom-openseadragon && yarn cp-mirador-to-public"
   },
