--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
       "ipv6": "^3.1.3",
       "jquery": "^3.3.1",
       "js-file-download": "^0.4.1",
+      "jsewts": "^1.0.0",
       "leaflet": "^1.3.4",
       "lodash": "^4.17.10",
       "material-colors": "^1.2.5",
@@ -77,8 +78,7 @@
       "redux-devtools-extension": "^2.13.2",
       "redux-saga": "^0.16.0",
       "redux-thunk": "^2.2.0",
-      "universalviewer": "^3.0.16",
-      "wylie": "https://github.com/buda-base/wylie"
+      "universalviewer": "^3.0.16"
    },
    "scripts": {
       "start": "react-scripts start",
@@ -89,7 +89,7 @@
       "cp-uv-to-public": "rm -rf public/scripts/uv && cp -R node_modules/universalviewer/uv public/scripts/",
       "uv-custom-openseadragon": "cp -f node_modules/openseadragon/build/openseadragon/openseadragon.min.js public/scripts/uv/lib/",
       "cp-mirador-to-public": "rm -rf public/scripts/mirador && cp -R node_modules/mirador/dist public/scripts/mirador",
-      "link-mirador-demo":"ln -nsf ../mirador-demo.html public/scripts/ && ln -nsf ../tibcolldemo2.json public/scripts/",
+      "link-mirador-demo": "ln -nsf ../mirador-demo.html public/scripts/ && ln -nsf ../tibcolldemo2.json public/scripts/",
       "postinstall": "yarn cp-uv-to-public && yarn uv-custom-openseadragon && yarn cp-mirador-to-public && yarn link-mirador-demo"
    },
    "devDependencies": {
