--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       "ipv6": "^3.1.3",
       "jquery": "^3.3.1",
       "js-file-download": "^0.4.1",
-      "jsewts": "^1.0.0",
+      "jsewts": "https://github.com/buda-base/jsewts",
       "leaflet": "^1.3.4",
       "lodash": "^4.17.10",
       "material-colors": "^1.2.5",
@@ -108,6 +108,9 @@
       "whatwg-fetch": "^3.0.0"
    },
    "jest": {
+      "transformIgnorePatterns": [
+         "nodes_modules/jsewts"
+      ],
       "transform": {
          "^.+\\.js$": "babel-jest"
       },
