--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
    "presets": [  ["@babel/preset-env", { "targets": { "node": "current" } }],"@babel/preset-flow","@babel/preset-react"  ],
    "plugins": [ "@babel/plugin-proposal-class-properties",
                 "@babel/plugin-proposal-object-rest-spread",
-                "@babel/plugin-proposal-function-bind"
+                "@babel/plugin-proposal-function-bind",
+                "babel-plugin-dynamic-import-node-babel-7"
              ]
 }
