--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
    },
    "devDependencies": {
       "abortcontroller-polyfill": "^1.2.5",
+      "babel-plugin-dynamic-import-node-babel-7": "^2.0.7",
       "flow-bin": "^0.64.0",
       "flow-typed": "^2.5.1",
       "identity-obj-proxy": "^3.0.0",
@@ -109,7 +110,7 @@
    },
    "jest": {
       "transformIgnorePatterns": [
-         "nodes_modules/jsewts"
+         "/node_modules/"
       ],
       "transform": {
          "^.+\\.js$": "babel-jest"
