--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "google-maps-react": "^2.0.0",
       "ipv6": "^3.1.3",
       "jquery": "^3.3.1",
+      "js-cookies": "^1.0.4",
       "js-file-download": "^0.4.1",
       "jsewts": "^1.0.1",
       "leaflet": "^1.3.4",
