fixed mirador keyboard navigation (#56)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "@babel/preset-env": "^7.0.0",
       "@babel/preset-flow": "^7.0.0",
       "@babel/preset-react": "^7.0.0",
+      "@dbmdz/mirador-keyboardnavigation": "^1.1.0",
       "@fortawesome/fontawesome-svg-core": "^1.2.15",
       "@fortawesome/free-solid-svg-icons": "^5.7.2",
       "@fortawesome/react-fontawesome": "^0.1.4",
@@ -71,6 +72,7 @@
       "react-redux-i18n": "^1.9.2",
       "react-router": "^4.2.0",
       "react-router-dom": "^4.2.2",
+      "react-script-tag": "^1.1.2",
       "react-scripts": "^2.1.5",
       "react-scrollable-anchor": "^0.6.1",
       "react-test-renderer": "^16.8.2",
