--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
       "material-ui-search-bar": "^1.0.0-beta.4",
       "mirador": "https://github.com/buda-base/mirador#2.7.0-bdrc",
       "openseadragon": "https://github.com/openseadragon/openseadragon#master",
+      "pinyin4js": "^1.3.18",
       "query-string": "^5.1.0",
       "react": "^16.2.0",
       "react-cookie": "^3.0.4",
