--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
       "pinyin4js": "^1.3.18",
       "query-string": "^5.1.0",
       "react": "^16.2.0",
+      "react-bootstrap": "^0.31.2",
       "react-cookie": "^3.0.4",
       "react-copy-to-clipboard": "^5.0.1",
       "react-dom": "^16.2.0",
