--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "@turf/bbox": "^6.0.1",
       "@turf/meta": "^6.0.2",
       "annotated-etext-react": "https://github.com/buda-base/annotated-etext-react",
+      "array-move": "^2.1.0",
       "auth0-js": "^9.6.1",
       "babel-core": "^7.0.0-bridge.0",
       "diva.js": "^5.1.3",
@@ -76,6 +77,7 @@
       "react-router-dom": "^4.2.2",
       "react-scripts": "^2.1.5",
       "react-scrollable-anchor": "^0.6.1",
+      "react-sortable-hoc": "^1.10.1",
       "react-test-renderer": "^16.8.2",
       "redux": "^3.7.2",
       "redux-actions": "^2.2.1",
