add postbuild to rename build directory

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
    "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
+      "postbuild": "touch prod && mv prod old_prod && mv build prod && rm -rf old_prod",
       "test": "react-scripts test --env=jsdom",
       "eject": "react-scripts eject",
       "flow": "flow",
