--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "formdata-polyfill": "^3.0.11",
       "google-maps": "^3.3.0",
       "google-maps-react": "^2.0.0",
+      "hanzi-tsconv": "^0.1.1",
       "ipv6": "^3.1.3",
       "jquery": "^3.3.1",
       "js-cookies": "^1.0.4",
