add password reset link in user profile

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -6,7 +6,12 @@
      "audience": "https://bdrc-io.auth0.com/userinfo",
      "responseType": "token id_token",
      "scope": "openid user_metadata app_metada profile"
-  },
+   },
+   "password-reset":{
+      "client_id":"bZRCKQvibdCq5gF7gV2biIH9rLcqfVcS",
+      "audience":"https://bdrc-io.auth0.com/api/v2/",
+      "grant_type":"client_credentials"
+   },
    "ldspdi":
    {
       "endpoints":["//localhost:8080","//localhost:13280","//buda1.bdrc.io:13280","//purl.bdrc.io","//localhost:5555/test"],
