--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
       "react-scripts": "^2.1.5",
       "react-scrollable-anchor": "^0.6.1",
       "react-sortable-hoc": "^1.10.1",
+      "react-tabs": "^3.1.0",
       "react-test-renderer": "^16.8.2",
       "redux": "^3.7.2",
       "redux-actions": "^2.2.1",
