--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
       "react": "^16.2.0",
       "react-bootstrap": "^0.31.2",
       "react-cookie": "^3.0.4",
+      "react-cookie-consent": "^5.0.1",
       "react-copy-to-clipboard": "^5.0.1",
       "react-dom": "^16.2.0",
+      "react-ga": "^2.7.0",
       "react-infinite-scroller": "^1.1.4",
       "react-leaflet": "^2.0.1",
       "react-leaflet-google": "https://github.com/danieldunderfelt/react-leaflet-google.git",
