--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
       "google-maps": "^3.3.0",
       "google-maps-react": "^2.0.0",
       "hanzi-tsconv": "^0.1.1",
+      "i18next": "^19.4.5",
+      "i18next-redux-saga": "git+https://github.com/alexiusp/i18next-redux-saga.git",
       "ipv6": "^3.1.3",
       "jquery": "^3.3.1",
       "js-cookies": "^1.0.4",
@@ -75,7 +77,6 @@
       "react-loader": "^2.4.2",
       "react-new-window": "^0.0.7",
       "react-redux": "^5.0.6",
-      "react-redux-i18n": "^1.9.2",
       "react-resizable": "^1.8.0",
       "react-router": "^4.2.0",
       "react-router-dom": "^4.2.2",
@@ -88,7 +89,6 @@
       "redux-actions": "^2.2.1",
       "redux-devtools-extension": "^2.13.2",
       "redux-saga": "^0.16.0",
-      "redux-thunk": "^2.2.0",
       "tibetan-sort-js": "^2.1.3",
       "universalviewer": "^3.0.16"
    },
