--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
       "react-router": "^4.2.0",
       "react-router-dom": "^4.2.2",
       "react-scrollable-anchor": "^0.6.1",
+      "react-social-icons": "^4.1.0",
       "react-sortable-hoc": "^1.10.1",
       "react-tabs": "^3.1.0",
       "react-test-renderer": "^16.8.2",
