--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 public/meta.json
+public/config.json
 
 # dependencies
 /node_modules
