add language menu order in config-default (#320)

--- a/public/config-defaults.json
+++ b/public/config-defaults.json
@@ -83,6 +83,7 @@
       }
    ],
    "language": {
+      "menu":[ "bo", "en", "zh" ],
       "data":{
          "presets":{
             "0":[ "bo-x-ewts", "sa-x-iast" ],
