--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "hanzi-tsconv": "^0.1.1",
       "i18next": "^19.4.5",
       "i18next-redux-saga": "git+https://github.com/alexiusp/i18next-redux-saga.git",
+      "interweave": "^12.6.0",
       "jquery": "^3.3.1",
       "js-cookies": "^1.0.4",
       "js-file-download": "^0.4.1",
