--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "i18next": "^19.4.5",
       "i18next-redux-saga": "git+https://github.com/alexiusp/i18next-redux-saga.git",
       "interweave": "^12.6.0",
+      "intl-pluralrules": "^1.2.2",
       "jquery": "^3.3.1",
       "js-cookies": "^1.0.4",
       "js-file-download": "^0.4.1",
