--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "js-file-download": "^0.4.1",
       "jsewts": "^1.0.3",
       "leaflet": "^1.6.0",
+      "leaflet-gesture-handling": "^1.2.1",
       "lodash": "^4.17.10",
       "logdown": "^3.3.1",
       "material-colors": "^1.2.5",
